--- a/src/components/Preview/style.css
+++ b/src/components/Preview/style.css
@@ -1,2 +1,1 @@
-// Quise agregar mas personaliz
-ación al editor, no pude y así se quedó esto xd
+/* Quise agregar mas personalización al editor, no pude y así se quedó esto xd
